Enable java 19 features